# playlists

./: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
nginx/: Dockerfile  app.conf
plsarchiver/: __init__.py  client.py  decorators.py  forms.py  m3u.py  settings.py  spotify.py  web.py
plsarchiver/static/: app.css
plsarchiver/templates/: convert.html.j2  index.html.j2  layout.html.j2  likes.html.j2  playlists.html.j2
