[tool.poetry]
name = "plsarchiver"
version = "0.1.0"
description = ""
authors = ["Pierre-Yves Gillier <github@pygillier.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotify-client = "==1.9.1"
click = "==8.1.3"
python-dotenv = "==1.0.0"
spotipy = "==2.23.0"
flask = "==2.3.2"
flask-session2 = "==1.3.1"
flask-caching = "==2.0.2"
flask-debugtoolbar = "==0.13.1"
timeago = "==1.0.16"
bootstrap-flask = "==2.2.0"
python-dateutil = "==2.8.2"
flask-wtf = "==1.1.1"
gunicorn = "==20.1.0"
sentry-sdk = {extras = ["flask"], version = "==1.23.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
